Create: interfaces ICategoryService, IVegetableService
Implemented by CategoryService, VegetableService to get data (func GetAllAsync())

--- a/TeoGarden/TeoGarden.Application/TeoGarden.Application.csproj
+++ b/TeoGarden/TeoGarden.Application/TeoGarden.Application.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TeoGarden.Data\TeoGarden.Data.csproj" />
+    <ProjectReference Include="..\TeoGarden.ShareModel\TeoGarden.ShareModel.csproj" />
+  </ItemGroup>
+
 </Project>
