--- a/TeoGarden/TeoGarden.ShareModel/TeoGarden.ShareModel.csproj
+++ b/TeoGarden/TeoGarden.ShareModel/TeoGarden.ShareModel.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.6" />
     <PackageReference Include="Refit" Version="6.3.2" />
   </ItemGroup>
 
